# agten

./: .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini
agents/: lifecycle.py
agents/reasoning/: agent.py  base.py
agten/: __init__.py  communication.py  config.py  core.py  registry.py  tools.py
agten/reasoning/: __init__.py  tools.py
docs/: api_reference.md  tutorials.md
tests/: test_communication.py  test_config.py  test_core.py  test_registry.py
