[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhinav", email = "shawabhinav93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "langchain>=1.2.0",
    "langchain-gemini>=0.1.1",
    "langchain-google>=0.1.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]